# cfgen

./: .gitlab-ci.yml  Cargo.toml  README.md  azure-pipelines.yml
.ci/: azure-pipelines-template.yml
.github/workflows/: main.yml
cfgen_derive/: Cargo.toml
cfgen_derive/src/: lib.rs
src/: lib.rs  prelude.rs
structcfg_derive/: Cargo.toml
structcfg_derive/src/: lib.rs
tests/: basic.rs
tilde-expand/: Cargo.toml
