[package]
name = "cfgen"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[features]
with-toml = ["cfgen_derive/with-toml", "toml"]
yaml = ["cfgen_derive/yaml", "serde_yaml"]

[dependencies]
cfgen_derive = { path = "cfgen_derive" }
lazy_static = "1.0"
directories = "1.0"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.4", optional = true }
tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673999c1284184ebf97c7be207e7d4b970" }
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
