[package]
name = "cfgen"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = ["with-toml"]
with-toml = ["cfgen_derive/with-toml", "toml"]
yaml = ["cfgen_derive/yaml", "serde_yaml"]
expandpath = ["tilde-expand"]

[dependencies]
cfgen_derive = { path = "cfgen_derive" }
once_cell = "1"
directories = "2"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
tilde-expand = { git = "https://github.com/foldu/tilde-expand", rev = "8963d6673999c1284184ebf97c7be207e7d4b970", optional = true }
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
