[package]
name = "cfgen"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = ["with-toml"]
with-toml = ["cfgen_derive/with-toml", "toml"]
yaml = ["cfgen_derive/yaml", "serde_yaml"]

[dependencies]
cfgen_derive = { path = "cfgen_derive" }
tilde-expand = { path = "tilde-expand" }
once_cell = "1"
directories = "3"
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
