[package]
name = "cfgen_derive"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
heck = "0.3.1"
once_cell = "0.2"
cfg-if = "0.1"
darling = "0.10.0"

[features]
with-toml = []
yaml = []

[lib]
proc-macro = true
